apps/iot/zigbee2mqtt/base/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:W+0MKgEz8Nblp7SzxS3wWeosb/qi1A==,iv:mJvnbC995n+YnbiuqjE+9sbWoN1QIfatF0GM60Ob3HE=,tag:8RPBHubA0+kvfD6kENkCbQ==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: zigbee2mqtt-staging
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:cM6YqoW5hjuy6eITNsJ2YUvoswMGn/3xJ4tbuGrxSZw9opmhVA==,iv:xXpkJjT8DBMgQForSqBtpCRosOcpTQa/hUVfGj5adPA=,tag:8dnM3nAjoQR22VnsJ06/Ng==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              namespace: iot
    tls:
        domains:
            - main: ENC[AES256_GCM,data:rQtxabJWeLW4AlLSamsyVcti+TfLvQ==,iv:TAvnlgRa0kO7249IrVlpYEwPboeB4PA96TvNx3HW6K4=,tag:my+uEpSZ0mCAqG6fHGuKNw==,type:str]
              sans:
                - ENC[AES256_GCM,data:AcGgM7XKIsysQx7rHIeHHHxibIHnI30=,iv:+gfKXYoF/un+dhc5uR+QCOxtLnukwC/s+VAEoUaf+Fc=,tag:5BIgRhQCuzClXUXzV8JnyA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0S1BqT0tKTm82YVJ0THU1
[...]
            91rRd0AAP6RJxZUmF0Oax4oZHOvaeMCNTPijdHto/yAvV5subkO2lg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-22T18:21:43Z"
    mac: ENC[AES256_GCM,data:R8WB1QsHy5ajwgMfjypwqZ4SJQNI8NscdqUsDH5VGL0ku1paH7iM7nk2bdJIt30PIIhyuDFK+mKINjnPFHa6Jw3Zi3crigABHzyWke3QOtdRgp90nqF+LM1sgsaeQ1KJ1b/KiQXfiQolQzX7+tLcq+AVNOVG3WkkvvsR2OSAmvk=,iv:kM68KoFUGwVtcR9XQ3Ab+fO4jOwi/GLxYINMsoY7+4I=,tag:Rv1wDEdxjJt0R1rp0YItjw==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:56Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAwgx1mZcn7xu81b4rejL5XdzTAPJT4crvB9/91uzVYAC5
[...]
            =C1pg
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
